Content updates, moving theme button to the centre on mobile devices. Link fix for LinkedIn.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,9 +137,13 @@ h2 {
 
 
     #theme-toggle {
-        left: 50%;
-        right: auto;
-        transform: translateX(-50%);
+        margin: 0 auto 1.5rem;
+        display: flex;
+        justify-content: center;
+    }
+
+    h1{
+        margin-top: 2rem;
     }
 
 }
@@ -234,9 +238,6 @@ h1, h2, .welcome_text, .contact_title {
 /* Toggle Button */
 /* Floating button in top-right corner */
 #theme-toggle {
-    position: fixed;
-    top: 1rem;
-    right: 1rem;
     background: var(--bg-color);
     border: 1px solid var(--link-color);
     border-radius: 1.5rem;
@@ -248,7 +249,7 @@ h1, h2, .welcome_text, .contact_title {
     font-size: 1rem;
     color: var(--text-color);
     transition: background 0.3s ease, border 0.3s ease, color 0.3s ease;
-    z-index: 1000;
+    margin-bottom: 1rem; /* space below button */
 }
 
 #theme-toggle:hover {
